--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header id="home">
       <ul>
-      <li><a href="..\proj\main.html">CATOS</a></li>
+      <li><a href="..\proj\index.html">CATOS</a></li>
       </ul>
     </header>
     <div class="box1">
@@ -39,9 +39,9 @@
          <div class="cbox1">
              <div class="cat1">
                  <p1>
-                      <img src="\..\..\proj\images\kitten.jpg" alt="">
+                      <img src="\..\..\images\kitten.jpg" alt="">
                       <br>
-                      <a href="..\proj\categories\category1\subcategory\subcategory1.html">kitten</a>
+                      <a href="..\categories\category1\subcategory\subcategory1.html">kitten</a>
                </p1>
            </div>
        </div>
@@ -49,9 +49,9 @@
          <div class="cbox1">
              <div class="cat1">
                  <p1>
-                      <img src="\..\..\proj\images\confused.jpg" alt="">
+                      <img src="\..\..\images\confused.jpg" alt="">
                       <br>
-                      <a href="..\proj\categories\category2\subcategory\subcategory1.html">confused</a>
+                      <a href="..\categories\category2\subcategory\subcategory1.html">confused</a>
                </p1>
            </div>
        </div>
@@ -59,9 +59,9 @@
            <div class="cbox1">
                <div class="cat1">
                    <p1>
-                        <img src="\..\..\proj\images\meme.jpg" alt="">
+                        <img src="\..\..\images\meme.jpg" alt="">
                         <br>
-                        <a href="..\proj\categories\category3\subcategory\subcategory1.html">meme</a>
+                        <a href="..\categories\category3\subcategory\subcategory1.html">meme</a>
                  </p1>
              </div>
          </div>
@@ -69,9 +69,9 @@
         <div class="cbox1">
                <div class="cat1">
                    <p1>
-                        <img src="\..\..\proj\images\weird.jpg" alt="">
+                        <img src="\..\..\images\weird.jpg" alt="">
                         <br>
-                        <a href="..\proj\categories\category4\subcategory\subcategory1.html">weird</a>
+                        <a href="..\categories\category4\subcategory\subcategory1.html">weird</a>
                  </p1>
              </div>
          </div>
@@ -79,9 +79,9 @@
          <div class="cbox1">
              <div class="cat1">
                  <p1>
-                      <img src="\..\..\proj\images\happy.jpg" alt="">
+                      <img src="\..\..\images\happy.jpg" alt="">
                       <br>
-                      <a href="..\proj\categories\category5\subcategory\subcategory1.html">happy</a>
+                      <a href="..\categories\category5\subcategory\subcategory1.html">happy</a>
                </p1>
            </div>
        </div>
@@ -89,9 +89,9 @@
        <div class="cbox1">
            <div class="cat1">
                <p1>
-                    <img src="\..\..\proj\images\cute.jpg" alt="">
+                    <img src="\..\..\images\cute.jpg" alt="">
                     <br>
-                    <a href="..\proj\categories\category6\subcategory\subcategory1.html">cute</a>
+                    <a href="..\categories\category6\subcategory\subcategory1.html">cute</a>
              </p1>
          </div>
       </div>
@@ -99,9 +99,9 @@
       <div class="cbox1">
           <div class="cat1">
               <p1>
-                   <img src="\..\..\proj\images\scary.jpg" alt="">
+                   <img src="\..\..\images\scary.jpg" alt="">
                    <br>
-                   <a href="..\proj\categories\category7\subcategory\subcategory1.html">scary</a>
+                   <a href="..\categories\category7\subcategory\subcategory1.html">scary</a>
             </p1>
         </div>
       </div>
@@ -109,9 +109,9 @@
       <div class="cbox1">
           <div class="cat1">
               <p1>
-                   <img src="\..\..\proj\images\smile.jpg" alt="">
+                   <img src="\..\..\images\smile.jpg" alt="">
                    <br>
-                   <a href="..\proj\categories\category8\subcategory\subcategory1.html">smile</a>
+                   <a href="..\categories\category8\subcategory\subcategory1.html">smile</a>
             </p1>
         </div>
       </div>
@@ -119,9 +119,9 @@
       <div class="cbox1">
           <div class="cat1">
               <p1>
-                   <img src="\..\..\proj\images\judgy.jpg" alt="">
+                   <img src="\..\..\images\judgy.jpg" alt="">
                    <br>
-                   <a href="..\proj\categories\category9\subcategory\subcategory1.html">judgy</a>
+                   <a href="..\categories\category9\subcategory\subcategory1.html">judgy</a>
             </p1>
         </div>
       </div>
