--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
 
        <div class="abouts">
          <h1>About us</h1>
-         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+         <p> I am creative and curious learner. I do analyse problem before acting on it. During my graduation i am introduced to new
+diverse culture and gained various valuable skills. I am proficient in my field and i'm seeking a position in an organisation
+where i can contribute my skills for organization's success and synchronize with new technology while being resourceful,
+innovative and flexible.
+PS this is my first time on HTML and CSS, i've started learning 2 days ago;
+</p>
        </div>
        <div class="details">
          <h1> Contact Details</h1>
