--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          <div class="cbox1">
              <div class="cat1">
                  <p1>
-                      <img src="\..\..\images\happy.jpg" alt="" width="25%">
+                      <img src="\..\..\images\happy.jpg" alt="">
                       <br>
                       <a href="..\categories\category5\subcategory\subcategory1.html">happy</a>
                </p1>
