--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 
        <div class="abouts">
          <h1>About us</h1>
-         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nismmodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+         <p> Lorem ipsum veniam, quis nostrud exercitation ullamco laboris nismmodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+           <br>
+           <br>
            PS this is my first time on HTML and CSS, i've started learning 2 days ago;
 </p>
        </div>
